Revert "e Now only Ninja builds are out-of-source to better mimic common usage patterns, e.g. in CLion and Visual Studio"
This reverts commit 18560065

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -22,8 +22,7 @@ jobs:
           clangFormatVersion: 9
   build:
     env:
-      BUILD_DIR: ${{ github.workspace }}/buildspace
-      NINJA_BUILD_DIR: ${{ github.workspace }}/../buildspace
+      BUILD_DIR: ${{ github.workspace }}/../build
     strategy:
       fail-fast: false
       matrix:
@@ -52,23 +51,16 @@ jobs:
         - buildtype: ubuntu-latest
           os: ubuntu-latest
           generator: '"Unix Makefiles"'
-
         - buildtype: ubuntu-latest-ninja
           os: ubuntu-latest
           generator: '"Ninja"'
-          env:
-            BUILD_DIR: ${{ env.NINJA_BUILD_DIR }}
 
         - buildtype:  macOS-latest
           os: macOS-latest
           generator: '"Unix Makefiles"'  
-
         - buildtype:  macOS-latest-ninja
           os: macOS-latest
           generator: '"Ninja"'
-          env:
-            BUILD_DIR: ${{ env.NINJA_BUILD_DIR }}
-
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
