--- a/.travis.yml
+++ b/.travis.yml
@@ -87,6 +87,15 @@ language: cpp
       - ubuntu-toolchain-r-test
       - llvm-toolchain-trusty-8
 
+.addons-clang9: &clang9
+  apt:
+    packages:
+      - clang-9
+      - libstdc++-9-dev
+    sources:
+      - ubuntu-toolchain-r-test
+      - llvm-toolchain-trusty-9
+
 matrix:
   include:
     
@@ -138,6 +147,11 @@ matrix:
       dist: trusty
       addons: *clang8
 
+    - env: CLANG_VERSION=9
+      os: linux
+      dist: trusty
+      addons: *clang9
+
     # -------------------------------------------------------------------------
     # Mac clang
     # -------------------------------------------------------------------------
@@ -150,6 +164,9 @@ matrix:
 
     - os: osx
       osx_image: xcode10.2
+
+    - os: osx
+      osx_image: xcode11.3
 
 before_script:
   - if [ -n "$GCC_VERSION" ]; then export CXX="g++-${GCC_VERSION}" CC="gcc-${GCC_VERSION}"; fi
