e Try fixing clang-9 build on Ubuntu: https://travis-ci.org/approvals/ApprovalTests.cpp/jobs/636517326#L421 Disallowing sources: llvm-toolchain-trusty-9
Fix taken from:
https://github.com/taocpp/sequences/blob/master/.travis.yml#L419

--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,8 @@ language: cpp
       - libstdc++-9-dev
     sources:
       - ubuntu-toolchain-r-test
-      - llvm-toolchain-trusty-9
+      - sourceline: 'deb https://apt.llvm.org/xenial/ llvm-toolchain-xenial-9 main'
+        key_url: 'https://apt.llvm.org/llvm-snapshot.gpg.key'
 
 matrix:
   include:
