e Further attempt at fixing clang-9 build on Ubuntu: https://travis-ci.org/approvals/ApprovalTests.cpp/jobs/636533095#L445 The following packages have unmet dependencies: clang-9 : Depends: libclang-cpp9 (= 1:9~+20191211110317+c1a0a213378-1~exp1~20191211221711.104) but it is not going to be installed           Depends: libllvm9 (>= 1:9~svn298832-1~) but it is not going to be installed           Depends: libclang-common-9-dev (= 1:9~+20191211110317+c1a0a213378-1~exp1~20191211221711.104) but it is not going to be installed

--- a/.travis.yml
+++ b/.travis.yml
@@ -91,6 +91,9 @@ language: cpp
   apt:
     packages:
       - clang-9
+      - libclang-cpp9
+      - libllvm9
+      - libclang-common-9-dev
       - libstdc++-9-dev
     sources:
       - ubuntu-toolchain-r-test
