t Add optional check that all our Catch2 CMake targets work. See #70

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,3 +2,7 @@ add_subdirectory(Catch2_Tests)
 add_subdirectory(GoogleTest_Tests)
 add_subdirectory(DocTest_Tests)
 add_subdirectory(UT_Tests)
+
+if(APPROVAL_TESTS_ENABLE_CMAKE_INTEGRATION_TESTS)
+    add_subdirectory(CMake_Tests)
+endif()
