B Rename our Catch2 target from catch2 to Catch2, to be consistent with the name used by the Catch2 project. See #70

--- a/tests/CMake_Tests/catch2_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/catch2_cmake_checks/CMakeLists.txt
@@ -19,3 +19,6 @@ add_executable(
         catch2_cmake_checks_lower_case_catch2 catch2_cmake_checks.cpp)
 target_link_libraries(
         catch2_cmake_checks_lower_case_catch2 catch2)
+
+# Check that our real target name for Catch2 matches that used in the Catch2 project
+target_compile_definitions(Catch2 INTERFACE DUMMY_TEST_DEFINE)
