t Add optional check that all our Boost.ut CMake targets work. See #70

--- a/tests/CMake_Tests/CMakeLists.txt
+++ b/tests/CMake_Tests/CMakeLists.txt
@@ -1,3 +1,4 @@
 # Verify various bits of our CMake setup
 add_subdirectory(catch2_cmake_checks)
 add_subdirectory(doctest_cmake_checks)
+add_subdirectory(ut_cmake_checks)
