t Actually run the tests in CMake_Tests, via CTest. See #70

--- a/tests/CMake_Tests/doctest_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/doctest_cmake_checks/CMakeLists.txt
@@ -5,11 +5,23 @@ add_executable(
         doctest_cmake_checks_doctest_doctest doctest_cmake_checks.cpp)
 target_link_libraries(
         doctest_cmake_checks_doctest_doctest doctest::doctest)
+add_test(
+        NAME
+        doctest_cmake_checks_doctest_doctest
+        COMMAND
+        doctest_cmake_checks_doctest_doctest
+)
 
 add_executable(
         doctest_cmake_checks_capital_doctest doctest_cmake_checks.cpp)
 target_link_libraries(
         doctest_cmake_checks_capital_doctest doctest)
+add_test(
+        NAME
+        doctest_cmake_checks_capital_doctest
+        COMMAND
+        doctest_cmake_checks_capital_doctest
+)
 
 # Check that our real target name for doctest matches that used in the doctest project
 target_compile_definitions(doctest INTERFACE DUMMY_TEST_DEFINE)
