--- a/tests/CMake_Tests/ut_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/ut_cmake_checks/CMakeLists.txt
@@ -6,6 +6,12 @@ if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION GREATER_
             ut_cmake_checks_boost_ut ut_cmake_checks.cpp)
     target_link_libraries(
             ut_cmake_checks_boost_ut boost.ut)
+    add_test(
+            NAME
+            ut_cmake_checks_boost_ut
+            COMMAND
+            ut_cmake_checks_boost_ut
+    )
 
     # This one is historical, left over from when ApprovalTests.cpp was first created.
     # We could encourage users to move away from it.
@@ -13,6 +19,12 @@ if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION GREATER_
             ut_cmake_checks_ut ut_cmake_checks.cpp)
     target_link_libraries(
             ut_cmake_checks_ut ut)
+    add_test(
+            NAME
+            ut_cmake_checks_ut
+            COMMAND
+            ut_cmake_checks_ut
+    )
 
     # Check that our real target name for Boost.UT matches that used in the Catch2 project
     target_compile_definitions(boost.ut INTERFACE DUMMY_TEST_DEFINE)
