e Add a Unity CI build

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -31,6 +31,7 @@ jobs:
           windows-latest (clangcl),
           windows-2016,
           ubuntu-latest,
+          ubuntu-latest-unity-build,
           ubuntu-latest-ninja,
           macOS-latest,
           macOS-latest-ninja,
@@ -51,6 +52,9 @@ jobs:
         - buildtype: ubuntu-latest
           os: ubuntu-latest
           generator: '"Unix Makefiles"'
+        - buildtype: ubuntu-latest-unity-build
+          os: ubuntu-latest
+          generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
         - buildtype: ubuntu-latest-ninja
           os: ubuntu-latest
           generator: '"Ninja"'
