e Fix macOS-latest-ninja-unit build by installing Ninja

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -77,7 +77,7 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - uses: seanmiddleditch/gha-setup-ninja@v1
-      if: matrix.generator == '"Ninja"'
+      if: contains(matrix.generator, 'Ninja')
     - name: make build space
       run: |
         mkdir ${{ env.BUILD_DIR }}
