e Add some CMake debug output to understand why Ninja Unity builds work on GitHub action macOS-latest-ninja-unity give a compilation failure on my machine.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,3 +44,13 @@ if (NOT_SUBPROJECT)
     add_subdirectory(tests)
     add_subdirectory(examples)
 endif()
+
+message("CMAKE_VERSION = ${CMAKE_VERSION}")
+message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
+message("CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
+message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
+message("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
+message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
+message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
+message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
+message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
