--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -23,7 +23,8 @@ jobs:
   build:
     env:
       BUILD_DIR: ${{ github.workspace }}/../build
-      BUILD_DIR_EXPERIMENTAL: ${{ github.workspace }}/build_space
+      IN_TREE_BUILD_DIR: ${{ github.workspace }}/build_space
+      OUT_OF_TREE_BUILD_DIR: ${{ github.workspace }}/../build_space
     strategy:
       fail-fast: false
       matrix:
@@ -42,42 +43,47 @@ jobs:
         - buildtype: windows-latest
           os: windows-latest
           generator: '"Visual Studio 16 2019"'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: windows-latest (clangcl)
           os: windows-latest
           generator: '"Visual Studio 16 2019" -T "clangcl"'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: windows-2016
           os: windows-2016
-          generator: '"Visual Studio 15 2017"' 
+          generator: '"Visual Studio 15 2017"'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: ubuntu-latest
           os: ubuntu-latest
           generator: '"Unix Makefiles"'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype: ubuntu-latest-ninja
           os: ubuntu-latest
-          env:
-            BUILD_DIR_EXPERIMENTAL: ${{ github.workspace }}/../build_space
           generator: '"Ninja"'
+          builddir: ${{ env.OUT_OF_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest
           os: macOS-latest
-          generator: '"Unix Makefiles"'  
+          generator: '"Unix Makefiles"'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest-unity
           os: macOS-latest
           generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest-ninja
           os: macOS-latest
-          env:
-            BUILD_DIR_EXPERIMENTAL: ${{ github.workspace }}/../build_space
           generator: '"Ninja"'
+          builddir: ${{ env.OUT_OF_TREE_BUILD_DIR }}
 
         - buildtype:  macOS-latest-ninja-unity
           os: macOS-latest
           generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
+          builddir: ${{ env.IN_TREE_BUILD_DIR }}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
@@ -86,7 +92,7 @@ jobs:
     - name: make build space
       run: |
         mkdir ${{ env.BUILD_DIR }}
-        echo ${{ env.BUILD_DIR_EXPERIMENTAL }}
+        echo ${{ matrix.builddir }}
     - name: cmake
       run: |
         cmake --version
