--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -43,56 +43,68 @@ jobs:
         - buildtype: windows-latest
           os: windows-latest
           generator: '"Visual Studio 16 2019"'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: windows-latest (clangcl)
           os: windows-latest
           generator: '"Visual Studio 16 2019" -T "clangcl"'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: windows-2016
           os: windows-2016
           generator: '"Visual Studio 15 2017"'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: ubuntu-latest
           os: ubuntu-latest
           generator: '"Unix Makefiles"'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype: ubuntu-latest-ninja
           os: ubuntu-latest
           generator: '"Ninja"'
-          builddir: ${{ env.OUT_OF_TREE_BUILD_DIR }}
+          in_source_build: false
 
         - buildtype:  macOS-latest
           os: macOS-latest
           generator: '"Unix Makefiles"'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype:  macOS-latest-unity
           os: macOS-latest
           generator: '"Unix Makefiles" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
 
         - buildtype:  macOS-latest-ninja
           os: macOS-latest
           generator: '"Ninja"'
-          builddir: ${{ env.OUT_OF_TREE_BUILD_DIR }}
+          in_source_build: false
 
         - buildtype:  macOS-latest-ninja-unity
           os: macOS-latest
           generator: '"Ninja" -DCMAKE_UNITY_BUILD=yes -DCMAKE_UNITY_BUILD_BATCH_SIZE=50'
-          builddir: ${{ env.IN_TREE_BUILD_DIR }}
+          in_source_build: true
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@master
     - uses: seanmiddleditch/gha-setup-ninja@v1
       if: contains(matrix.generator, 'Ninja')
+
+    - name: set env
+      run: |
+        if {{ matrix.in_source_build }} == true
+        echo "::set-env name=BUILD_DIR_PATH::${{ env.IN_TREE_BUILD_DIR }}"
+    - name: set env out-of-source
+      run: |
+        if {{ matrix.in_source_build }} == false
+        echo "::set-env name=BUILD_DIR_PATH::${{ env.OUT_OF_TREE_BUILD_DIR }}"
+    - name: check env
+      run: |
+        echo Build space: ${{ env.BUILD_DIR_PATH }}
+
     - name: make build space
       run: |
         mkdir ${{ env.BUILD_DIR }}
-        echo ${{ matrix.builddir }}
     - name: cmake
       run: |
         cmake --version
