e Try to fix syntax error in github actions

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -91,11 +91,11 @@ jobs:
       if: contains(matrix.generator, 'Ninja')
 
     - name: set env
-      if matrix.in_source_build == true
+      if: matrix.in_source_build == true
       run: |
         echo "::set-env name=BUILD_DIR_PATH::${{ env.IN_TREE_BUILD_DIR }}"
     - name: set env out-of-source
-      if matrix.in_source_build == false
+      if: matrix.in_source_build == false
       run: |
         echo "::set-env name=BUILD_DIR_PATH::${{ env.OUT_OF_TREE_BUILD_DIR }}"
     - name: check env
