B ApprovalTests.cpp builds with Catch2 & Boost.ut obtained via add_subdirectory()

--- a/tests/CMake_Tests/catch2_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/catch2_cmake_checks/CMakeLists.txt
@@ -25,18 +25,23 @@ add_test(
         catch2_cmake_checks_capital_Catch2
 )
 
-# This one is historical, left over from when ApprovalTests.cpp was first created.
-# We could encourage users to move away from it.
-add_executable(
-        catch2_cmake_checks_lower_case_catch2 catch2_cmake_checks.cpp)
-target_link_libraries(
-        catch2_cmake_checks_lower_case_catch2 catch2)
-add_test(
-        NAME
-        catch2_cmake_checks_lower_case_catch2
-        COMMAND
-        catch2_cmake_checks_lower_case_catch2
-)
+if(NOT_SUBPROJECT)
+    # Don't build this if we are in a sub-project, in case the user has pulled in
+    # a full Catch2 clone, as in that case, our old, non-standard library won't exist...
+    #
+    # This one is historical, left over from when ApprovalTests.cpp was first created.
+    # We could encourage users to move away from it.
+    add_executable(
+            catch2_cmake_checks_lower_case_catch2 catch2_cmake_checks.cpp)
+    target_link_libraries(
+            catch2_cmake_checks_lower_case_catch2 catch2)
+    add_test(
+            NAME
+            catch2_cmake_checks_lower_case_catch2
+            COMMAND
+            catch2_cmake_checks_lower_case_catch2
+    )
+endif()
 
 # Check that our real target name for Catch2 matches that used in the Catch2 project
 target_compile_definitions(Catch2 INTERFACE DUMMY_TEST_DEFINE)
