--- a/tests/CMake_Tests/ut_cmake_checks/CMakeLists.txt
+++ b/tests/CMake_Tests/ut_cmake_checks/CMakeLists.txt
@@ -13,18 +13,23 @@ if((CMAKE_CXX_COMPILER_ID STREQUAL "GNU" AND CMAKE_CXX_COMPILER_VERSION GREATER_
             ut_cmake_checks_boost_ut
     )
 
-    # This one is historical, left over from when ApprovalTests.cpp was first created.
-    # We could encourage users to move away from it.
-    add_executable(
-            ut_cmake_checks_ut ut_cmake_checks.cpp)
-    target_link_libraries(
-            ut_cmake_checks_ut ut)
-    add_test(
-            NAME
-            ut_cmake_checks_ut
-            COMMAND
-            ut_cmake_checks_ut
-    )
+    if(NOT_SUBPROJECT)
+        # Don't build this if we are in a sub-project, in case the user has pulled in
+        # a full Boost.ut clone, as in that case, our old, non-standard library won't exist...
+        #
+        # This one is historical, left over from when ApprovalTests.cpp was first created.
+        # We could encourage users to move away from it.
+        add_executable(
+                ut_cmake_checks_ut ut_cmake_checks.cpp)
+        target_link_libraries(
+                ut_cmake_checks_ut Boost.ut)
+        add_test(
+                NAME
+                ut_cmake_checks_ut
+                COMMAND
+                ut_cmake_checks_ut
+        )
+    endif()
 
     # Check that our real target name for Boost.UT matches that used in the Catch2 project
     target_compile_definitions(boost.ut INTERFACE DUMMY_TEST_DEFINE)
