e Make the option to control cmake tests consistent with similar options. These tests are now always run if this is int a sub-project. And they are off by default when this is a sub-project. They also require APPROVAL_TESTS_BUILD_TESTING to be enabled, to take effect.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,9 +14,7 @@ set(CMAKE_VERBOSE_MAKEFILE off)
 
 option(APPROVAL_TESTS_ENABLE_CODE_COVERAGE "Enable coverage reporting for selected tests" OFF)
 
-# TODO Rename s/ENABLE/BUILD/
-# TODO Make this also work if not a subproject
-option(APPROVAL_TESTS_ENABLE_CMAKE_INTEGRATION_TESTS "Enable tests that check our CMake integration" ON)
+option(APPROVAL_TESTS_BUILD_CMAKE_INTEGRATION_TESTING "Enable tests that check our CMake integration" OFF)
 
 option(APPROVAL_TESTS_BUILD_THIRD_PARTY
         "Include third_party directory. Note that these are always included if this is the top-level project"
@@ -75,7 +73,7 @@ message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
 message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
 message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
 message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
-#message("APPROVAL_TESTS_ENABLE_CMAKE_INTEGRATION_TESTS = ${APPROVAL_TESTS_ENABLE_CMAKE_INTEGRATION_TESTS}")
+#message("APPROVAL_TESTS_BUILD_CMAKE_INTEGRATION_TESTING = ${APPROVAL_TESTS_BUILD_CMAKE_INTEGRATION_TESTING}")
 #message("APPROVAL_TESTS_BUILD_THIRD_PARTY = ${APPROVAL_TESTS_BUILD_THIRD_PARTY}")
 #message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
 #message("APPROVAL_TESTS_BUILD_EXAMPLES = ${APPROVAL_TESTS_BUILD_EXAMPLES}")
