--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -3,6 +3,6 @@ add_subdirectory(GoogleTest_Tests)
 add_subdirectory(DocTest_Tests)
 add_subdirectory(UT_Tests)
 
-if(APPROVAL_TESTS_ENABLE_CMAKE_INTEGRATION_TESTS)
+if(NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_CMAKE_INTEGRATION_TESTING)
     add_subdirectory(CMake_Tests)
 endif()
