e Comment out some CMake debug output

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,15 +66,15 @@ if(NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_EXAMPLES)
     add_subdirectory(examples)
 endif()
 
-message("CMAKE_VERSION = ${CMAKE_VERSION}")
-message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
-message("CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
-message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
-message("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
-message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
-message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
-message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
-message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
+#message("CMAKE_VERSION = ${CMAKE_VERSION}")
+#message("CMAKE_GENERATOR = ${CMAKE_GENERATOR}")
+#message("CMAKE_SOURCE_DIR = ${CMAKE_SOURCE_DIR}")
+#message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
+#message("CMAKE_CURRENT_BINARY_DIR = ${CMAKE_CURRENT_BINARY_DIR}")
+#message("CMAKE_CXX_COMPILER = ${CMAKE_CXX_COMPILER}")
+#message("CMAKE_CXX_COMPILER_ID = ${CMAKE_CXX_COMPILER_ID}")
+#message("CMAKE_CXX_COMPILER_VERSION = ${CMAKE_CXX_COMPILER_VERSION}")
+#message("CMAKE_UNITY_BUILD = ${CMAKE_UNITY_BUILD}")
 #message("APPROVAL_TESTS_BUILD_CMAKE_INTEGRATION_TESTING = ${APPROVAL_TESTS_BUILD_CMAKE_INTEGRATION_TESTING}")
 #message("APPROVAL_TESTS_BUILD_THIRD_PARTY = ${APPROVAL_TESTS_BUILD_THIRD_PARTY}")
 #message("APPROVAL_TESTS_BUILD_TESTING = ${APPROVAL_TESTS_BUILD_TESTING}")
