--- a/ApprovalTests/CMakeLists.txt
+++ b/ApprovalTests/CMakeLists.txt
@@ -3,7 +3,9 @@ set(CMAKE_CXX_STANDARD 11)
 add_library(${PROJECT_NAME} INTERFACE)
 add_library(ApprovalTests::ApprovalTests ALIAS ApprovalTests)
 target_include_directories(${PROJECT_NAME}
-        INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..)
+        INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..
+        INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}
+        )
 target_compile_options(${PROJECT_NAME} INTERFACE $<$<CXX_COMPILER_ID:MSVC>:/FC>)
 
 if(("${CMAKE_GENERATOR}" MATCHES "Ninja") AND (${CMAKE_UNITY_BUILD}))
