t Try different fix for CombinationTests.cpp problem with Unity builds.
The previous one fixed the compilation failures, but CombinationTests's
tests failed on macos-latest-ninja-xcode because the source code
location was not available, when that file was compiled on its own.
So instead separate out main.cpp and compile it on its own.

--- a/tests/Catch2_Tests/CMakeLists.txt
+++ b/tests/Catch2_Tests/CMakeLists.txt
@@ -32,7 +32,7 @@ add_executable(${PROJECT_NAME}
     writers/StringWriterTests.cpp
     )
 
-set_source_files_properties(CombinationTests.cpp PROPERTIES SKIP_UNITY_BUILD_INCLUSION YES)
+set_source_files_properties(main.cpp PROPERTIES SKIP_UNITY_BUILD_INCLUSION YES)
 
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests Catch2::Catch2)
 target_compile_definitions(${PROJECT_NAME} PRIVATE CATCH_CONFIG_FAST_COMPILE)
