e Fix case of filename so ApprovalTestsOptions.cmake is found on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ project(ApprovalTests.cpp)
 
 message("CMAKE_CURRENT_SOURCE_DIR = ${CMAKE_CURRENT_SOURCE_DIR}")
 message("CMAKE_MODULE_PATH = ${CMAKE_MODULE_PATH}")
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/cmake/")
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_CURRENT_SOURCE_DIR}/CMake/")
 message("CMAKE_MODULE_PATH = ${CMAKE_MODULE_PATH}")
 include(ApprovalTestsOptions)
 
