e Remove  PPROVAL_TESTS_BUILD_THIRD_PARTY_GOOGLE_TEST cmake option.
It didn't work when used with FetchContent, as ApprovalTests.cpp
uses ExternalProject_Add for GoogleTest, which only downloads
the GoogleTest source at build time, not configure time.

It makes sense to only provide access to the single headers that
we have downloaded and saved.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,7 +19,7 @@ if(APPROVAL_TESTS_ENABLE_CODE_COVERAGE)
     append_coverage_compiler_flags()
 endif()
 
-if (NOT_SUBPROJECT OR APPROVAL_TESTS_BUILD_THIRD_PARTY_GOOGLE_TEST)
+if (NOT_SUBPROJECT)
     if(NOT TARGET gtest_main)
         # Download and unpack googletest at configure time
         configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
