e Implement check for broken links in documentation - see #26

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -20,6 +20,15 @@ jobs:
           source: '.'
           exclude: './third_party'
           clangFormatVersion: 9
+
+  markdown-link-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+        with:
+          fetch-depth: 1
+      - uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
+
   build:
     env:
       IN_TREE_BUILD_DIR: ${{ github.workspace }}/build_space
