e Fix link-checking for relative URLs

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -3,5 +3,6 @@
     {
       "pattern": "^https://github.com/SimonCropp/MarkdownSnippets"
     }
-  ]
+  ],
+  "baseUrl": "https://github.com/approvals/ApprovalTests.cpp/"
 }
