e Fix link-checking for relative URLs

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -7,7 +7,7 @@
   "replacementPatterns": [
     {
       "pattern": "^/",
-      "replacement": "https://github.com/approvals/ApprovalTests.cpp/"
+      "replacement": "https://github.com/approvals/ApprovalTests.cpp/blob/master/"
     }
     ]
 }
