--- a/mlc_config.json
+++ b/mlc_config.json
@@ -2,6 +2,9 @@
   "ignorePatterns": [
     {
       "pattern": "^https://github.com/SimonCropp/MarkdownSnippets"
+    },
+    {
+      "pattern": "^https://github.com/approvals/ApprovalTests.cpp/actions"
     }
   ],
   "replacementPatterns": [
