e Supply our own instructions to lint markdown files so that we can use --quiet - to only see errors

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -25,9 +25,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
+      - uses: actions/setup-node@v1
         with:
-          fetch-depth: 1
-      - uses: gaurav-nelson/github-action-markdown-link-check@0.4.0
+          node-version: '12.x'
+      - name: Install markdown-link-check
+        run: npm i -g markdown-link-check
+      - name: Run markdown-link-check on *.source.md files
+        run: ind . -name \*.source.md -exec markdown-link-check --config mlc_config.json --quiet  {} \;
 
   build:
     env:
