B Try a different workaround to prevent 429 (too many requests) errors

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -4,7 +4,7 @@
       "pattern": "^https://github.com/SimonCropp/MarkdownSnippets"
     },
     {
-      "pattern": "^https://github.com/approvals/ApprovalTests.cpp/blob/master/doc/README.md"
+      "pattern": "^/doc/README.md"
     },
     {
       "pattern": "^https://github.com/approvals/ApprovalTests.cpp/actions"
