--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -30,7 +30,7 @@ jobs:
           node-version: '12.x'
       - name: Install markdown-link-check
         run: npm i -g markdown-link-check
-      - name: Run markdown-link-check on *.source.md files
+      - name: Run markdown-link-check on *.md files
         run: ./scripts/check_links.sh
 
   build:
