t Rename DocTestDocumentationSamples.cpp -> DocTestDocsSamples.cpp to shorten names of approval files.

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(${PROJECT_NAME}
     main.cpp
     namers/DocTestNamerTests.cpp
-    docs/DocTestDocumentationSamples.cpp
+        docs/DocTestDocsSamples.cpp
     namers/NamerTests.cpp
     docs/DisposableSamples.cpp
     docs/ForgottenToConfigure.cpp
