t Rename Catch2DocumentationSamples.cpp -> Catch2DocsSamples.cpp to shorten names of approval files.

--- a/tests/Catch2_Tests/CMakeLists.txt
+++ b/tests/Catch2_Tests/CMakeLists.txt
@@ -9,7 +9,7 @@ add_executable(${PROJECT_NAME}
     PairUtilities.h
     StyleGuide.h
     VectorTests.cpp
-    docs/Catch2DocumentationSamples.cpp
+        docs/Catch2DocsSamples.cpp
     docs/CombinationsSampleCode.cpp
     docs/OverviewExamples.cpp
     docs/ToStringExample.cpp
