t Rename two test files with identical names For clarity - and searchability in CLion

--- a/tests/DocTest_Tests/CMakeLists.txt
+++ b/tests/DocTest_Tests/CMakeLists.txt
@@ -8,7 +8,7 @@ add_executable(${PROJECT_NAME}
     docs/DisposableSamples.cpp
     docs/ForgottenToConfigure.cpp
     utilities/ExceptionCollectorTests.cpp
-    ApprovalTestTests.cpp
+    DocTestApprovalTestTests.cpp
     )
 target_link_libraries(${PROJECT_NAME} ApprovalTests::ApprovalTests doctest::doctest)
 add_test(NAME ${PROJECT_NAME} COMMAND ${PROJECT_NAME})
