B Ignore 400 in markdown-link checks for https://conan.io/ This site is working - I can't work why it's giving Status 400 "Bad Request" - so just tell the link-checker to ignore that URL.

--- a/mlc_config.json
+++ b/mlc_config.json
@@ -4,6 +4,9 @@
       "pattern": "^https://github.com/SimonCropp/MarkdownSnippets"
     },
     {
+      "pattern": "^https://conan.io/"
+    },
+    {
       "pattern": "^/doc/README.md"
     },
     {
