Revert "e Disable markdown-link-check. It's taking too much time dealing with failures, some of which are for valid URLs. See #95"
This reverts commit ad7b667c - I think that there was actually an invalid URL, due to an error
in Markdown formatting, which I found and fixed in
https://github.com/approvals/ApprovalTests.cpp/commit/888d3ce426c3a025dbc0d18a252f32b4e2e9e86c

--- a/.github/workflows/github_actions_build.yml
+++ b/.github/workflows/github_actions_build.yml
@@ -21,17 +21,17 @@ jobs:
           exclude: './third_party'
           clangFormatVersion: 9
 
-#  markdown-link-check:
-#    runs-on: ubuntu-latest
-#    steps:
-#      - uses: actions/checkout@master
-#      - uses: actions/setup-node@v1
-#        with:
-#          node-version: '12.x'
-#      - name: Install markdown-link-check
-#        run: npm i -g markdown-link-check
-#      - name: Run markdown-link-check on *.md files
-#        run: ./scripts/check_links.sh
+  markdown-link-check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '12.x'
+      - name: Install markdown-link-check
+        run: npm i -g markdown-link-check
+      - name: Run markdown-link-check on *.md files
+        run: ./scripts/check_links.sh
 
   build:
     env:
